--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-color: var(--bg-color);
         }
 
-        /* Sidebar with Profile Image */
+        /* Sidebar */
         nav {
             width: 260px;
             background-color: var(--sidebar-color);
@@ -64,8 +64,9 @@
         }
 
         .card h3 { margin-top: 0; color: var(--sidebar-color); font-size: 1.1rem; text-transform: uppercase; letter-spacing: 1px; }
-        .card p { color: #555; line-height: 1.6; }
+        .card p { color: #555; line-height: 1.6; margin: 8px 0; }
         .btn { display: inline-block; margin-top: 15px; padding: 10px 20px; background: var(--accent-color); color: white; border-radius: 5px; text-decoration: none; font-weight: bold; }
+        .contact-item { margin-bottom: 10px; font-size: 0.95rem; }
 
         @media (max-width: 768px) {
             body { flex-direction: column; }
@@ -82,7 +83,8 @@
         <a href="#bio">About Me</a>
         <a href="#resume">Professional Experience</a>
         <a href="#projects">ACC 4510 Coursework</a>
-        <a href="https://www.linkedin.com" target="_blank" style="margin-top: 20px; border-bottom: none;">LinkedIn Profile ↗</a>
+        <a href="#contact">Contact Information</a>
+        <a href="https://www.linkedin.com/in/jaedancalder" target="_blank" style="margin-top: 20px; border-bottom: none; color: #fff; font-weight: bold;">LinkedIn Profile ↗</a>
     </nav>
 
     <main>
@@ -103,14 +105,21 @@
 
             <div id="resume" class="card">
                 <h3>Career Track</h3>
-                <p><strong>Education:</strong> B.S. in Accounting, UVU</p>
-                <p><strong>Upcoming:</strong> Audit Associate at Tanner (Starting May 2027)</p>
-                <a href="#" class="btn">View Full Resume</a>
+                <p><strong>Education:</strong> B.S. in Accounting, Utah Valley University</p>
+                <p><strong>Status:</strong> Incoming Audit Associate at Tanner (Starting May 2027)</p>
+                <a href="resume.pdf" target="_blank" class="btn">View Full Resume (PDF)</a>
+            </div>
+
+            <div id="contact" class="card">
+                <h3>Contact Information</h3>
+                <div class="contact-item">📍 <strong>Location:</strong> Provo, UT</div>
+                <div class="contact-item">📧 <strong>Email:</strong> <a href="mailto:your.email@uvu.edu" style="color: var(--accent-color);">your.email@uvu.edu</a></div>
+                <div class="contact-item">🔗 <strong>Professional:</strong> <a href="https://www.linkedin.com/in/jaedancalder" target="_blank" style="color: var(--accent-color);">LinkedIn Profile</a></div>
             </div>
 
             <div id="projects" class="card">
                 <h3>ACC 4510 Projects</h3>
-                <p>A repository for audit data analysis and class-specific deliverables including:</p>
+                <p>Ongoing audit data analysis projects including:</p>
                 <ul>
                     <li>UVU MAcc Survey Data Analysis</li>
                     <li>Financial Report Review: Vista, CA</li>
