Update theme to UVU colors

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Jaedan Calder | Professional Dashboard</title>
     <style>
         :root {
-            --sidebar-color: #2c3e50;
-            --accent-color: #3498db;
-            --bg-color: #f8f9fa;
+            --sidebar-color: #006633;
+            --accent-color: #003366;
+            --bg-color: #f4f7f5;
             --card-shadow: 0 4px 12px rgba(0,0,0,0.08);
         }
 
